--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,9 +1,9 @@
 <ion-header [translucent]="true">
-    <ion-toolbar color="dark">
+    <ion-toolbar color="dark" >
         <ion-title class="text-sansita" color="light">
-            Películas 
+            Apicación de películas 
         </ion-title>
-        <p>Integrantes: Christian Llumiquinga y Nathaly Bermeo</p>
+        <p  class="text-sansita" >Integrantes: Christian Llumiquinga y Nathaly Bermeo</p>
     </ion-toolbar>
 </ion-header>
 
